--- a/mysql/mysql-pv.yaml
+++ b/mysql/mysql-pv.yaml
@@ -11,7 +11,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/c/Users/k8s/mysql"
+    path: "/run/desktop/mnt/host/wsl/k8s/mysql"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
