--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,7 +1,7 @@
 apiVersion: skaffold/v1
 kind: Config
 deploy:
-  kubeContext: minikube
+  kubeContext: docker-desktop
   kubectl:
     manifests:
       - ./mysql/mysql-pv.yaml
